# monorepo

./: .env.example  .eslintrc.cjs  .gitignore  E2E_INSTRUCTIONS.md  GAP_ANALYSIS.md  README.md  index.html  knip.json  package-lock.json  package.json  powersync.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.agent/: ARCHITECTURE.md
.agent/agents/: frontend-specialist.md  mobile-developer.md
.agent/rules/: GEMINI.md
.claude/: settings.local.json
.github/workflows/: ci.yml  pr-check.yml  release.yml
docs/: PLAN-mobile-migration.md
e2e/: playwright.config.ts  utils.ts
e2e/tests/: app.spec.ts  customers.spec.ts  error-handling.spec.ts  invoice-numbering.spec.ts  (+1 more)
mobile/: .env.example  App.tsx  app.json  babel.config.js  babel.test.config.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsc_output_2.txt
plan-doc/: PLAN-tanstack-integration.md  bubbly-mixing-mango.md  clever-twirling-pike.md  ditistoq.docx  inventory-system-enhancement.md  invoice-payment-integration.md  pos-plan.txt  research-copilot.docx  snazzy-sniffing-sundae.md  wild-sniffing-eagle.md
playwright-report/: index.html
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  backup-2026-01-08.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/: cleanup_orphaned_data.sql
tasks/: estimate_detail_complete.md
test-results/: .last-run.json
types/: computer.ts  mobile.ts  web.ts
(+476 files in other folders)
