[package]
name = "digistoq-desktop"
version = "0.1.0"
description = "DigiStoq Desktop - Offline-first inventory management"
authors = ["DigiStoq"]
edition = "2021"

[lib]
name = "digistoq_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
